--- a/style.css
+++ b/style.css
@@ -10,15 +10,29 @@ body {
     overflow: hidden;
 }
 
-.search-box {
+.search-box-start {
     position: absolute;
-    width: 350px;
+    width: 370px;
     background: #fff;
     margin: 30px 20px;
     border-radius: 10px;
 }
 
-.search-box button {
+.search-box-start button {
+    border: none; 
+    padding: 15px 20px; 
+    font-size: 14px; 
+}
+
+.search-box-end {
+    position: absolute;
+    width: 370px;
+    background: #fff;
+    margin: 130px 20px;
+    border-radius: 10px;
+}
+
+.search-box-end button {
     border: none; 
     padding: 15px 20px; 
     font-size: 14px; 
@@ -40,18 +54,33 @@ input{
     color: #333;
 }
 
-.result-box ul{
+.result-box-start,
+.result-box-end {
+    position: absolute;
+    width: 370px;
+    background: #fff;
+    border-radius: 10px;
+    z-index: 2; 
+    top: 80px;
+    max-height: 600px;
+    overflow-y: scroll;
+}
+
+.result-box-start ul,
+.result-box-end ul {
     border-top: 1px;
     padding: 15px 10px;
 }
 
-.result-box ul li{
+.result-box-start ul li,
+.result-box-end ul li {
     list-style: none;
     border-radius: 3px;
     padding: 15px 10px;
     cursor: pointer;
 }
 
-.result-box ul li:hover{
+.result-box-start ul li:hover,
+.result-box-end ul li:hover {
     background: #e9f3ff;
 }
